<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.oscarjesus.desarrolloaplicacion.MainActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNombreWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_completo"
                android:id="@+id/etNombre"/>


        </android.support.design.widget.TextInputLayout>

        <DatePicker
            android:id="@+id/etNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fecha de nacimiento"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_below="@+id/etNombreWrapper">
        </DatePicker>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTelefonoWrapper"
            android:layout_below="@+id/etNacimiento">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_telefono"
                android:id="@+id/etTelefono"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etCorreoWrapper"
            android:layout_below="@+id/etTelefonoWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_correo"
                android:id="@+id/etCorreo"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDescripcionWrapper"
            android:layout_below="@+id/etCorreoWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_descripcion"
                android:id="@+id/etDescripcion"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etDescripcionWrapper"
            android:text="@string/button_siguiente"
            android:theme="@style/ButtonSiguiente"/>

    </RelativeLayout>
</ScrollView>